# rWifi-tui

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  build_all.ps1
.github/workflows/: build-linux-binary.yml  build-package-apk.yml  build-package-appimage.yml  build-package-flatpak.yml  build-windows-binary.yml
packaging/apk/: APKBUILD
packaging/appimage/: AppRun  appimage-builder.yml
packaging/aur/: PKGBUILD
packaging/completions/: generate-completions.sh
packaging/deb/: build-debian-package.sh
packaging/deb/debian/: control  postinst  prerm
packaging/desktop/: rwif.desktop
packaging/flatpak/: build-flatpak.sh  org.local76.rwif.yaml
packaging/nix/: default.nix
packaging/rpm/: build-redhat-rpm.sh  rwif.spec
packaging/winget/: winget.yaml
packaging/wix/: build-windows-msi.ps1  main.wxs
src/: config.rs  logger.rs  main.rs  wlan.rs
src/app/: keys.rs  keys_overlays.rs  mod.rs  mouse.rs
src/backend/: mod.rs  sys_info.rs
src/backend/wlan/win32/: mod.rs
src/ui/: accent_gauge.rs  layout.rs  mod.rs  overlays.rs  panels.rs
web/: index.html
