[package]
name = "rwif"
version = "2.5.3"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.30"
qrcodegen = "1.8.0"
rcommon = { git = "https://github.com/tourian-dynamics/rCommon.git", branch = "main" }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_Ndis",
    "Win32_System_EventLog",
    "Win32_System_Console",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
] }
windows = { version = "0.52.0", features = [
    "Data_Xml_Dom",
    "UI_Notifications",
] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "Jeryd <jerydleuck@gmail.com>"
assets = [
    ["target/x86_64-unknown-linux-musl/release/rwif", "usr/bin/rwif", "755"],
    ["assets/brand/app_icon.png", "usr/share/pixmaps/rwif.png", "644"],
    ["packaging/desktop/rwif.desktop", "usr/share/applications/rwif.desktop", "644"],
]

[package.metadata.generate-rpm]
auto-req = "no"
assets = [
    { source = "target/x86_64-unknown-linux-musl/release/rwif", dest = "/usr/bin/rwif", mode = "755" }
]

# To build locally before pushing rCommon to GitHub, uncomment:
# [patch."https://github.com/tourian-dynamics/rCommon.git"]
# rcommon = { path = "../rCommon" }
